--- a/index.html
+++ b/index.html
@@ -5,5 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <style>
+    #box {
+      width: 200px;
+      height: 200px;
+      border: 1px;
+      background-color: red;
+      margin-left: 40vw;
+      transition: all 0.9s ease;
+    }
+    #box:hover {
+      width: 400px;
+      height: 400px;
+      cursor: pointer;
+      background-color: blue;
+    }
+  </style>
+  <body>
+    <div id="box"></div>
+  </body>
 </html>
